# actix-web-gcp-cloud-run-deploy-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: cicd.yml
src/: config.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  mod.rs
tests/: integration_tests.rs
